--- a/index.html
+++ b/index.html
@@ -289,42 +289,42 @@
                 <ul class="client-list">
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon" weight="45px" height="50px">
+                            <svg class="logo-icon" width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon"  weight="45px" height="50px">
+                            <svg class="logo-icon"  width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon"  weight="45px" height="50px">
+                            <svg class="logo-icon"  width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon" weight="45px" height="50px">
+                            <svg class="logo-icon" width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon" weight="45px" height="50px">
+                            <svg class="logo-icon" width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="client-item">
                         <a class="client-link" href="#">
-                            <svg class="logo-icon" weight="45px" height="50px">
+                            <svg class="logo-icon" width="45px" height="50px">
                                 <use href="./image/symbol-icons.svg#icon-logo-6"></use>
                             </svg>
                         </a>
